WIP: HTTP Postback Messenger support

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>frontend/favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Inter:400,600" rel="stylesheet" />
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <script src="<%= BASE_URL %>api/config.js"></script>
+    <script src="<%= BASE_URL %>api/config.js" id="server-config"></script>
   </head>
   <body>
     <noscript>
